<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <CheckBox
    android:id="@+id/cb1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/sms_monitor"/>
    <CheckBox
    android:id="@+id/cb2"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/app_state_monitor"/>
    <CheckBox
    android:id="@+id/cb3"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/sd_state_monitor"/>
    <CheckBox
    android:id="@+id/cb4"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/receive_custom_broadcast"/>
    <CheckBox
    android:id="@+id/cb5"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/unlock_screen_broadcast" />
    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_broadcast"/>
</LinearLayout>